Text Editor: line number color used for text #75369

Closed
opened 2020-04-04 10:08:39 +02:00 by shannon zachow · 9 comments

System Information
Operating system: linux
Graphics card:

Blender Version
Broken: version: 2.82a, 2.83 (sub 11), branch: master, commit date: 2020-03-31 23:07, hash: da3cb514e5, type: Release build date: 2020-03-31, 23:14:33
Worked:

Short description of error
Text_Editor with Syntax_Highlighting OFF: plain text on all lines (Except for the current line) use Line_Number Color.

Exact steps for others to reproduce the error
Start new blender file.
Change an area to Text_Editor.
[+ New]
type several lines.

if Syntax_Highlighting ON: colors work as expected.
if Syntax_Highlighting OFF: only text of current line uses Theme_Space Text Color. Text on lines that are not current_line use Line_Number Color.

**System Information** Operating system: linux Graphics card: **Blender Version** Broken: version: 2.82a, 2.83 (sub 11), branch: master, commit date: 2020-03-31 23:07, hash: da3cb514e52d, type: Release build date: 2020-03-31, 23:14:33 Worked: **Short description of error** Text_Editor with Syntax_Highlighting OFF: plain text on all lines (Except for the current line) use Line_Number Color. **Exact steps for others to reproduce the error** Start new blender file. Change an area to Text_Editor. [+ New] type several lines. if Syntax_Highlighting ON: colors work as expected. if Syntax_Highlighting OFF: only text of current line uses Theme_Space Text Color. Text on lines that are not current_line use Line_Number Color.
Author

Added subscriber: @shannonz-1

Added subscriber: @shannonz-1
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Yes, it behaves as described if syntax highlighting is turned OFF while line numbers is ON. Although it will properly use the text color for all lines if you also turn line numbers OFF. Following shows three states of it (middle one incorrect):

TextColors.png

Yes, it behaves as described if syntax highlighting is turned OFF while line numbers is ON. Although it will properly use the text color for all lines if you also turn line numbers OFF. Following shows three states of it (middle one incorrect): ![TextColors.png](https://archive.blender.org/developer/F8448148/TextColors.png)
Member
Probable fix here: https://developer.blender.org/D7337

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 8f5b9fb519

This issue was referenced by 8f5b9fb51997c62ef13bf0848c6c213e8a100863

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-08-28 19:53:36 +02:00

Resolved by committing 8f5b9fb519

Resolved by committing 8f5b9fb519
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75369
No description provided.